Added element markup for homepage

--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
 <body>
 
     <header>
-
+        <nav></nav>
     </header>
-
     <main>
+        
+        <div class="container">
+
+            <div class="about">
+                <h1>Vaibhav Patil,</h1>
+                <h2>BTech. Computer Engineering, ASE Intern Contentstack.</h2>
+            </div>
+
+        </div>
 
     </main>
 
     <footer>
-
+        <div class="socials">
+            <div class="soical_icon"></div>
+            <div class="soical_icon"></div>
+            <div class="soical_icon"></div>
+        </div>
     </footer>
 
 </body>
