Added styling to navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
 
     <header>
-        <nav></nav>
+        <nav class="blue-border nav">
+            <a class="nav__item red-border" href="#">Home</a>
+            <a class="nav__item red-border" href="#">About</a>
+            <a class="nav__item red-border" href="#">Projects</a>
+        </nav>
     </header>
     <main>
         
