--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
     <main>
         
-        <div class="container">
+        <div class="container blue-border">
 
-            <div class="about">
+            <div class="about red-border">
                 <h1>Vaibhav Patil,</h1>
                 <h2>BTech. Computer Engineering, ASE Intern Contentstack.</h2>
             </div>
