Added markup and styling to socials

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </main>
 
     <footer>
-        <div class="socials">
-            <div class="soical_icon"></div>
-            <div class="soical_icon"></div>
-            <div class="soical_icon"></div>
+        <div class="socials blue-border">
+            <div class="social__icon red-border"></div>
+            <div class="social__icon red-border"></div>
+            <div class="social__icon red-border"></div>
         </div>
     </footer>
 
