Added icons to socials

--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
 
     <footer>
         <div class="socials blue-border">
-            <div class="social__icon red-border"></div>
-            <div class="social__icon red-border"></div>
-            <div class="social__icon red-border"></div>
+            <div class="social__icon red-border">
+                <img class="socials_icon__image" src="./images/instagram.svg" alt="instagram">
+            </div>
+            <div class="social__icon red-border">
+                <img class="socials_icon__image" src="./images/github.svg" alt="github">
+            </div>
+            <div class="social__icon red-border">
+                <img class="socials_icon__image" src="./images/linkedin.svg" alt="linkedin">
+            </div>
         </div>
     </footer>
 
