Added styling to navbar, about and socials

--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Orbitron:wght@400;800&display=swap" rel="stylesheet">
     <title>Homepage</title>
 </head>
 
-<body>
+<body class="body--background">
 
     <header>
         <nav class="blue-border nav">
-            <a class="nav__item red-border" href="#">Home</a>
-            <a class="nav__item red-border" href="#">About</a>
-            <a class="nav__item red-border" href="#">Projects</a>
+            <a class="nav__item" href="#">Home</a>
+            <a class="nav__item" href="#">About</a>
+            <a class="nav__item" href="#">Projects</a>
         </nav>
     </header>
     <main>
         
-        <div class="container blue-border">
+        <div class="container red-border">
 
-            <div class="about red-border">
-                <h1>Vaibhav Patil,</h1>
-                <h2>BTech. Computer Engineering, ASE Intern Contentstack.</h2>
+            <div class="about blue-border">
+                <div class="about__title">Vaibhav Patil,</div>
+                <div class="about__introduction">B Tech. Computer Engineering, ASE Intern Contentstack.</div>
             </div>
 
         </div>
@@ -34,13 +35,13 @@
     <footer>
         <div class="socials blue-border">
             <div class="social__icon red-border">
-                <img class="socials_icon__image" src="./images/instagram.svg" alt="instagram">
+                <img class="social__icon__image" src="./images/instagram.svg" alt="instagram">
             </div>
             <div class="social__icon red-border">
-                <img class="socials_icon__image" src="./images/github.svg" alt="github">
+                <img class="social__icon__image" src="./images/github.svg" alt="github">
             </div>
             <div class="social__icon red-border">
-                <img class="socials_icon__image" src="./images/linkedin.svg" alt="linkedin">
+                <img class="social__icon__image" src="./images/linkedin.svg" alt="linkedin">
             </div>
         </div>
     </footer>
