--- a/index.html
+++ b/index.html
@@ -13,37 +13,43 @@
 <body class="body--background">
 
     <header>
-        <nav class="blue-border nav">
-            <a class="nav__item" href="#">Home</a>
-            <a class="nav__item" href="#">About</a>
-            <a class="nav__item" href="#">Projects</a>
+        <nav class="nav display--flex  flex--align-i-center">
+            <div class="nav__logo-name display--flex flex--align-i-center">
+                <img class="nav__logo blue-border " src="./images/logo.png" alt="logo of website">
+                <div class="nav__title blue-border ">Vaibhav Patil</div>
+            </div>
+            <div class="nav__div blue-border display--flex flex--align-i-center">
+                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center red-border" href="#">Home</a>
+                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center red-border" href="#">About</a>
+                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center red-border" href="#">Projects</a>
+            </div>
         </nav>
     </header>
     <main>
         
-        <div class="container red-border">
+        <div class="container display--flex flex--direction-col red-border">
 
             <div class="about blue-border">
                 <div class="about__title">Vaibhav Patil,</div>
                 <div class="about__introduction">B Tech. Computer Engineering, ASE Intern Contentstack.</div>
             </div>
-
+            <div class="socials blue-border">
+                <div class="social__icon red-border">
+                    <img class="social__icon__image" src="./images/instagram.svg" alt="instagram">
+                </div>
+                <div class="social__icon red-border">
+                    <img class="social__icon__image" src="./images/github.svg" alt="github">
+                </div>
+                <div class="social__icon red-border">
+                    <img class="social__icon__image" src="./images/linkedin.svg" alt="linkedin">
+                </div>
+            </div>
         </div>
 
     </main>
 
     <footer>
-        <div class="socials blue-border">
-            <div class="social__icon red-border">
-                <img class="social__icon__image" src="./images/instagram.svg" alt="instagram">
-            </div>
-            <div class="social__icon red-border">
-                <img class="social__icon__image" src="./images/github.svg" alt="github">
-            </div>
-            <div class="social__icon red-border">
-                <img class="social__icon__image" src="./images/linkedin.svg" alt="linkedin">
-            </div>
-        </div>
+        
     </footer>
 
 </body>
