Added styling to about section

--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
                         
                     </div>
                 </div>
-                <div class="about__work-experience section--top-margin">
-                    During my academics I have worked with BMC and Codekul as intern and I am currently working as ASE intern at Contentstack.
+                <div class="about__work-experience section--top-margin border--bottom">
+                    During my academics I have worked with BMC and Codekul as a intern and I am currently working as ASE intern at Contentstack.
                     <div class="about__work-experience-cards display--flex flex--justify-c-center">
-                        <div class="about--work-card display--flex flex--direction-col flex--align-i-center blue-border">
+                        <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
                             <div class="about--work-card-title">R&D Intern at BMC Software</div>
                             <p class="about--work-card-content">Developed an application for downloading Database patch updates manually or automatically.</p>
+                            <div class="about--work-card-title">Technology Stack</div>
                             <div class="tech-stack display--flex">
                                 <div class="tech">Python</div>
                                 <div class="tech">Linux</div>
@@ -88,22 +89,27 @@
                                 <div class="tech">Wget</div>
                             </div>
                         </div>
-                        <div class="about--work-card">
-                            <div class="about--work-card-title">Fullstack Android developer</div>
-                            <p class="about--work-card-content">Developed an Android application to fecth and show videos from Vimeo.</p>
+                        <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                            <div class="about--work-card-title">Fullstack android developer at Codekul</div>
+                            <p class="about--work-card-content">Developed an android application which can fetch and show videos from Vimeo</p>
+                            <div class="about--work-card-title">Technology Stack</div>
                             <div class="tech-stack display--flex">
                                 <div class="tech">Android</div>
-                                <div class="tech">Java</div>
                                 <div class="tech">Spring boot</div>
+                                <div class="tech">Java</div>
                                 <div class="tech">MySQL</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="about__achivements section--top-margin">
-                    In my engineering journey I participated in several competitions. In <span class="location--span">Techsurf'22</span> I got the 4th rank.  
+                    In my engineering journey I participated in several competitions. Some of them are mentioned below.
+                    <ul class="about__achivements-list">
+                        <li>Techsurf'22 - <span class="education--span">3rd Runner-Up</span></li>
+                        <li>Unnat Bharat Abhiyaan</li>
+                        <li>Datathon</li>
+                    </ul> 
                 </div>
-            </div>
         </div>
         <div class="projects">
             
