--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
     <header>
         <nav class="nav display--flex  flex--align-i-center">
             <div class="nav__logo-name display--flex flex--align-i-center">
-                <img class="nav__logo blue-border " src="./images/logo.png" alt="logo of website">
-                <div class="nav__title blue-border ">Vaibhav Patil</div>
+                <img class="nav__logo" src="./images/vp-logo.png" alt="logo of website">
+                <div class="nav__title">Vaibhav Patil</div>
             </div>
-            <div class="nav__div blue-border display--flex flex--align-i-center">
-                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center red-border" href="#">Home</a>
-                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center red-border" href="#">About</a>
-                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center red-border" href="#">Projects</a>
+            <div class="nav__div display--flex flex--align-i-center">
+                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center" href="#">Home</a>
+                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center" href="#">About</a>
+                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center" href="#">Projects</a>
             </div>
         </nav>
     </header>
     <main>
         
-        <div class="container display--flex flex--direction-col red-border">
+        <div class="container display--flex flex--direction-col">
 
-            <div class="home blue-border">
+            <div class="home">
                 <div class="home__title">Vaibhav Patil,</div>
                 <div class="home__introduction">B Tech. Computer Engineering, ASE Intern Contentstack.</div>
             </div>
-            <div class="socials  display--flex blue-border">
-                <div class="social__icon display--flex red-border">
+            <div class="socials  display--flex">
+                <div class="social__icon display--flex">
                     <img class="social__icon__image" src="./images/instagram.svg" alt="instagram">
                 </div>
-                <div class="social__icon display--flex red-border">
+                <div class="social__icon display--flex">
                     <img class="social__icon__image" src="./images/github.svg" alt="github">
                 </div>
-                <div class="social__icon display--flex red-border">
+                <div class="social__icon display--flex">
                     <img class="social__icon__image" src="./images/linkedin.svg" alt="linkedin">
                 </div>
             </div>
         </div>
-        <div class="about display--flex flex--direction-col flex--align-i-center blue-border">
+        <div class="about red-border display--flex flex--direction-col flex--align-i-center">
             <div class="about__title">About</div>
             <div class="about__me section--top-margin">
                 <div class="about__me-text border--bottom">
@@ -110,9 +110,57 @@
                         <li>Datathon</li>
                     </ul> 
                 </div>
+            </div>
         </div>
-        <div class="projects">
-            
+        <div class="projects display--flex flex--direction-col flex--align-i-center blue-border">
+            <div class="about__title">Projects</div>
+                <div class="project__cards display--flex flex--justify-c-center">
+                    <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                        <div class="about--work-card-title">Devanagari handwritten character recognition system</div>
+                        <p class="about--work-card-content">In this project we built a system which can take scanned image as input and recognize devanagari characters in it.</p>
+                        <div class="about--work-card-title">Technology Stack</div>
+                        <div class="tech-stack display--flex">
+                            <div class="tech">Machine Learning</div>
+                            <div class="tech">Python</div>
+                            <div class="tech">Flask</div>
+                            <div class="tech">Android</div>
+                        </div>
+                    </div>
+                    <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                        <div class="about--work-card-title">Image size reducer</div>
+                        <p class="about--work-card-content">This project assess the quality of image using CNN and using the quality score jpeg compression is applied to reduce the size of image.</p>
+                        <div class="about--work-card-title">Technology Stack</div>
+                        <div class="tech-stack display--flex">
+                            <div class="tech">Python</div>
+                            <div class="tech">Deep Learning</div>
+                            <div class="tech">Fast api</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__cards display--flex flex--justify-c-center">
+                    <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                        <div class="about--work-card-title">TFTP Server</div>
+                        <p class="about--work-card-content">In this project UI based app is developed for sharing files using over the network TFTP protocol.</p>
+                        <div class="about--work-card-title">Technology Stack</div>
+                        <div class="tech-stack display--flex">
+                            <div class="tech">Python</div>
+                            <div class="tech">Socket Programming</div>
+                            <div class="tech">Tkinter</div>
+                        </div>
+                    </div>
+                    <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                        <div class="about--work-card-title">Agrobazar</div>
+                        <p class="about--work-card-content">This project is about providing a e-commerce app for farmers to sell their products.</p>
+                        <div class="about--work-card-title">Technology Stack</div>
+                        <div class="tech-stack display--flex">
+                            <div class="tech">Android</div>
+                            <div class="tech">Java</div>
+                            <div class="tech">PHP</div>
+                            <div class="tech">MySQL</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
