Added responsiveness to project and hobby cards

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="nav display--flex  flex--align-i-center">
             <div class="nav__logo-name display--flex flex--align-i-center">
-                <a href="#Home">
+                <a class="nav__logo-container" href="#Home">
                     <img class="nav__logo" src="./images/vp-logo.png" alt="logo of website">
                 </a>
                 <div class="nav__title">Vaibhav Patil</div>
