Added responsiveness to header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body id="Home" class="background--color  body--background">
 
-    <header>
+    <header class="header">
         <nav class="nav display--flex  flex--align-i-center">
-            <div class="nav__logo-name display--flex flex--align-i-center">
+            <div class="nav__logo-name display--flex flex--align-i-center ">
                 <a class="nav__logo-container" href="#Home">
                     <img class="nav__logo" src="./images/vp-logo.png" alt="logo of website">
                 </a>
@@ -48,7 +48,8 @@
                 </div>
             </div>
         </div>
-        <div id="About" class="about red-border display--flex flex--direction-col flex--align-i-center">
+
+        <div id="About" class="about  display--flex flex--direction-col flex--align-i-center">
             <div class="about__title">About</div>
             <div class="about__me section--top-margin">
                 <div class="about__me-text border--bottom">
@@ -114,52 +115,51 @@
                 </div>
             </div>
         </div>
-        <div id="Projects" class="projects display--flex flex--direction-col flex--align-i-center blue-border">
+        <div id="Projects" class="projects display--flex flex--direction-col flex--align-i-center ">
             <div class="about__title">Projects</div>
-                <div class="project__cards display--flex flex--justify-c-center">
-                    <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
-                        <div class="about--work-card-title">Devanagari handwritten character recognition system</div>
-                        <p class="about--work-card-content">In this project we built a system which can take scanned image as input and recognize devanagari characters in it.</p>
-                        <div class="about--work-card-title">Technology Stack</div>
-                        <div class="tech-stack display--flex">
-                            <div class="tech">Machine Learning</div>
-                            <div class="tech">Python</div>
-                            <div class="tech">Flask</div>
-                            <div class="tech">Android</div>
-                        </div>
-                    </div>
-                    <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
-                        <div class="about--work-card-title">Image size reducer</div>
-                        <p class="about--work-card-content">This project assess the quality of image using CNN and using the quality score jpeg compression is applied to reduce the size of image.</p>
-                        <div class="about--work-card-title">Technology Stack</div>
-                        <div class="tech-stack display--flex">
-                            <div class="tech">Python</div>
-                            <div class="tech">Deep Learning</div>
-                            <div class="tech">Fast api</div>
-                        </div>
+            <div class="project__cards display--flex flex--justify-c-center">
+                <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                    <div class="about--work-card-title">Devanagari handwritten character recognition system</div>
+                    <p class="about--work-card-content">In this project we built a system which can take scanned image as input and recognize devanagari characters in it.</p>
+                    <div class="about--work-card-title">Technology Stack</div>
+                    <div class="tech-stack display--flex">
+                        <div class="tech">Machine Learning</div>
+                        <div class="tech">Python</div>
+                        <div class="tech">Flask</div>
+                        <div class="tech">Android</div>
                     </div>
                 </div>
-                <div class="project__cards display--flex flex--justify-c-center">
-                    <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
-                        <div class="about--work-card-title">TFTP Server</div>
-                        <p class="about--work-card-content">In this project UI based app is developed for sharing files using over the network TFTP protocol.</p>
-                        <div class="about--work-card-title">Technology Stack</div>
-                        <div class="tech-stack display--flex">
-                            <div class="tech">Python</div>
-                            <div class="tech">Socket Programming</div>
-                            <div class="tech">Tkinter</div>
-                        </div>
+                <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                    <div class="about--work-card-title">Image size reducer</div>
+                    <p class="about--work-card-content">This project assess the quality of image using CNN and using the quality score jpeg compression is applied to reduce the size of image.</p>
+                    <div class="about--work-card-title">Technology Stack</div>
+                    <div class="tech-stack display--flex">
+                        <div class="tech">Python</div>
+                        <div class="tech">Deep Learning</div>
+                        <div class="tech">Fast api</div>
                     </div>
-                    <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
-                        <div class="about--work-card-title">Agrobazar</div>
-                        <p class="about--work-card-content">This project is about providing a e-commerce app for farmers to sell their products.</p>
-                        <div class="about--work-card-title">Technology Stack</div>
-                        <div class="tech-stack display--flex">
-                            <div class="tech">Android</div>
-                            <div class="tech">Java</div>
-                            <div class="tech">PHP</div>
-                            <div class="tech">MySQL</div>
-                        </div>
+                </div>
+            </div>
+            <div class="project__cards display--flex flex--justify-c-center">
+                <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                    <div class="about--work-card-title">TFTP Server</div>
+                    <p class="about--work-card-content">In this project UI based app is developed for sharing files using over the network TFTP protocol.</p>
+                    <div class="about--work-card-title">Technology Stack</div>
+                    <div class="tech-stack display--flex">
+                        <div class="tech">Python</div>
+                        <div class="tech">Socket Programming</div>
+                        <div class="tech">Tkinter</div>
+                    </div>
+                </div>
+                <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                    <div class="about--work-card-title">Agrobazar</div>
+                    <p class="about--work-card-content">This project is about providing a e-commerce app for farmers to sell their products.</p>
+                    <div class="about--work-card-title">Technology Stack</div>
+                    <div class="tech-stack display--flex">
+                        <div class="tech">Android</div>
+                        <div class="tech">Java</div>
+                        <div class="tech">PHP</div>
+                        <div class="tech">MySQL</div>
                     </div>
                 </div>
             </div>
