Added links to socials

--- a/index.html
+++ b/index.html
@@ -38,14 +38,21 @@
             </div>
             <div class="socials  display--flex">
                 <div class="social__icon display--flex">
-                    <img class="social__icon__image" src="./images/instagram.svg" alt="instagram">
+                    <a href="https://www.instagram.com/vaibhavpatil4240/" target="_blank">
+                        <img class="social__icon__image" src="./images/instagram.svg" alt="instagram">
+                    </a>
                 </div>
                 <div class="social__icon display--flex">
-                    <img class="social__icon__image" src="./images/github.svg" alt="github">
+                    <a href="https://github.com/VaibhavPatil4240" target="_blank">
+                        <img class="social__icon__image" src="./images/github.svg" alt="instagram">
+                    </a>
                 </div>
                 <div class="social__icon display--flex">
-                    <img class="social__icon__image" src="./images/linkedin.svg" alt="linkedin">
+                    <a href="https://www.linkedin.com/in/vaibhav-patil-04756a213/" target="_blank">
+                        <img class="social__icon__image" src="./images/linkedin.svg" alt="instagram">
+                    </a>
                 </div>
+                
             </div>
         </div>
 
