Added certificates and hyperlinks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Orbitron:wght@400;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8acd09923a.js" crossorigin="anonymous"></script>
-    <title>Homepage</title>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <title>Vaibhav's Portfolio</title>
 </head>
 
 <body id="Home" class="background--color  body--background">
@@ -21,10 +22,11 @@
                 </a>
                 <div class="nav__title">Vaibhav Patil</div>
             </div>
-            <div class="nav__div display--flex flex--align-i-center">
+            <div class="nav__div display--flex flex--justify-c-end">
                 <a class="nav__item display--flex flex--justify-c-center flex--align-i-center" href="#Home">Home</a>
                 <a class="nav__item display--flex flex--justify-c-center flex--align-i-center" href="#About">About</a>
                 <a class="nav__item display--flex flex--justify-c-center flex--align-i-center" href="#Projects">Projects</a>
+                <a class="nav__item display--flex flex--justify-c-center flex--align-i-center" href="./assets/Resume_Vaibhav_Patil_3.pdf" target="_blank">Resume</a>
             </div>
         </nav>
     </header>
@@ -38,8 +40,8 @@
             </div>
             <div class="socials  display--flex">
                 <div class="social__icon display--flex">
-                    <a href="https://www.instagram.com/vaibhavpatil4240/" target="_blank">
-                        <img class="social__icon__image" src="./images/instagram.svg" alt="instagram">
+                    <a href="https://www.youtube.com/@vaibhavpatil3411" target="_blank">
+                        <img class="social__icon__image" src="./images/youtube.svg" alt="youtube">
                     </a>
                 </div>
                 <div class="social__icon display--flex">
@@ -47,7 +49,7 @@
                         <img class="social__icon__image" src="./images/github.svg" alt="instagram">
                     </a>
                 </div>
-                <div class="social__icon display--flex">
+                <div class="social__icon display--flex flex--align-i-center flex--justify-c-center">
                     <a href="https://www.linkedin.com/in/vaibhav-patil-04756a213/" target="_blank">
                         <img class="social__icon__image" src="./images/linkedin.svg" alt="instagram">
                     </a>
@@ -87,7 +89,7 @@
                 </div>
                 <div class="about__work-experience section--top-margin border--bottom">
                     During my academics I have worked with BMC and Codekul as a intern and I am currently working as ASE intern at Contentstack.
-                    <div class="about__work-experience-cards display--flex flex--justify-c-center">
+                    <div class="about__work-experience-cards display--flex flex--justify-c-center" data-toggle="tooltip" title="View certificate"  onclick="window.open('./assets/BMC_Certificate.pdf', '_blank')">
                         <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
                             <div class="about--work-card-title">R&D Intern at BMC Software</div>
                             <p class="about--work-card-content">Developed an application for downloading Database patch updates manually or automatically.</p>
@@ -99,7 +101,7 @@
                                 <div class="tech">Wget</div>
                             </div>
                         </div>
-                        <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                        <div class="about--work-card display--flex flex--direction-col flex--align-i-center" data-toggle="tooltip" title="View certificate" onclick="window.open('./assets/Vaibhav_Patil_Fullstack_Android_Developer.pdf', '_blank')">
                             <div class="about--work-card-title">Fullstack android developer at Codekul</div>
                             <p class="about--work-card-content">Developed an android application which can fetch and show videos from Vimeo</p>
                             <div class="about--work-card-title">Technology Stack</div>
@@ -115,16 +117,16 @@
                 <div class="about__achivements section--top-margin">
                     In my engineering journey I participated in several competitions. Some of them are mentioned below.
                     <ul class="about__achivements-list">
-                        <li>Techsurf'22 - <span class="education--span">3rd Runner-Up</span></li>
+                        <li class="enlarge"  data-toggle="tooltip" title="Click to see more details"  onclick="window.open('https://unstop.com/competitions/techsurf-2022-contentstack-359635/case-submissions/44082?d=eyJwYWdlIjoxLCJ0ZWFtSWQiOjg3ODE4NzksImFzc29jaWF0aW9uSWQiOjIwODUwMn0=', '_blank')">Techsurf'22 - <span class="education--span">3rd Runner-Up</span></li>
                         <li>Unnat Bharat Abhiyaan</li>
-                        <li>Datathon</li>
+                        <li class="enlarge"  data-toggle="tooltip" title="View certificate"  onclick="window.open('./assets/Datathon.png', '_blank')">Datathon</li>
                     </ul> 
                 </div>
             </div>
         </div>
         <div id="Projects" class="projects display--flex flex--direction-col flex--align-i-center ">
             <div class="about__title">Projects</div>
-            <div class="project__cards display--flex flex--justify-c-center">
+            <div class="project__cards display--flex flex--justify-c-center" data-toggle="tooltip" title="Click to open git repository"  onclick="window.open('https://github.com/VaibhavPatil4240/DHCR-System', '_blank')">
                 <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
                     <div class="about--work-card-title">Devanagari handwritten character recognition system</div>
                     <p class="about--work-card-content">In this project we built a system which can take scanned image as input and recognize devanagari characters in it.</p>
@@ -136,7 +138,7 @@
                         <div class="tech">Android</div>
                     </div>
                 </div>
-                <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                <div class="about--work-card display--flex flex--direction-col flex--align-i-center" data-toggle="tooltip" title="Click to open git repository"  onclick="window.open('https://github.com/VaibhavPatil4240/Image-Size-Reducer-FastApi', '_blank')">
                     <div class="about--work-card-title">Image size reducer</div>
                     <p class="about--work-card-content">This project assess the quality of image using CNN and using the quality score jpeg compression is applied to reduce the size of image.</p>
                     <div class="about--work-card-title">Technology Stack</div>
@@ -147,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project__cards display--flex flex--justify-c-center">
+            <div class="project__cards display--flex flex--justify-c-center"  data-toggle="tooltip" title="Click to open git repository"  onclick="window.open('https://github.com/VaibhavPatil4240/TFTP-Server', '_blank')" >
                 <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
                     <div class="about--work-card-title">TFTP Server</div>
                     <p class="about--work-card-content">In this project UI based app is developed for sharing files using over the network TFTP protocol.</p>
@@ -158,7 +160,7 @@
                         <div class="tech">Tkinter</div>
                     </div>
                 </div>
-                <div class="about--work-card display--flex flex--direction-col flex--align-i-center">
+                <div class="about--work-card display--flex flex--direction-col flex--align-i-center" data-toggle="tooltip" title="Click to open git repository"  onclick="window.open('https://github.com/VaibhavPatil4240/AgroBazar', '_blank')">
                     <div class="about--work-card-title">Agrobazar</div>
                     <p class="about--work-card-content">This project is about providing a e-commerce app for farmers to sell their products.</p>
                     <div class="about--work-card-title">Technology Stack</div>
