--- a/index.html
+++ b/index.html
@@ -173,6 +173,41 @@
                 </div>
             </div>
         </div>
+        <div id="certificates" class="projects display--flex flex--direction-col flex--align-i-center ">
+            <div class="about__title"> certifications</div>
+            <div class="display--flex flex--wrap flex--justify-c-center">
+                <div class="certificate-card flex--align-i-center flex--justify-c-center">
+                    <h3 class="certificate-title">Cloud Computing</h3>
+                    <div>
+                        <img class= "certificate-image" src="./images/certificates/Cloud computing.jpg" alt="certificate">
+                    </div>
+                </div>
+                <div class="certificate-card flex--align-i-center flex--justify-c-center">
+                    <h3 class="certificate-title">Azure AI fundamentals</h3>
+                    <div>
+                        <img class= "certificate-image" src="./images/certificates/azure_ai.png" alt="certificate">
+                    </div>
+                </div>
+                <div class="certificate-card flex--align-i-center flex--justify-c-center">
+                    <h3 class="certificate-title">Web development</h3>
+                    <div>
+                        <img class= "certificate-image" src="./images/certificates/WebDev(iit).jpg" alt="certificate">
+                    </div>
+                </div>
+                <div class="certificate-card flex--align-i-center flex--justify-c-center">
+                    <h3 class="certificate-title">3D Modeling Autodesk</h3>
+                    <div>
+                        <img class= "certificate-image" src="./images/certificates/autocad.png" alt="certificate">
+                    </div>
+                </div>
+                <div class="certificate-card flex--align-i-center flex--justify-c-center">
+                    <h3 class="certificate-title">Python</h3>
+                    <div>
+                        <img class= "certificate-image" src="./images/certificates/coursera-python.png" alt="certificate">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
