--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
         </div>
         <div id="certificates" class="projects display--flex flex--direction-col flex--align-i-center ">
-            <div class="about__title"> certifications</div>
+            <div class="about__title">Certifications</div>
             <div class="display--flex flex--wrap flex--justify-c-center">
                 <div class="certificate-card flex--align-i-center flex--justify-c-center">
                     <h3 class="certificate-title">Cloud Computing</h3>
